--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.1.0",
     "@ng-icons/core": "^27.3.1",
     "@ng-icons/heroicons": "^27.3.1",
+    "ng-lazyload-image": "^9.1.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
