--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@emailjs/browser": "^4.3.3",
     "@ng-icons/core": "^27.3.1",
     "@ng-icons/heroicons": "^27.3.1",
+    "emailjs": "^4.0.3",
     "ng-lazyload-image": "^9.1.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
